--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 <body>
     <div id="app">
         <div>
+            <van-notice-bar
+                left-icon="volume-o"
+                text="此网站内容仅供学习用，不用于商业目的。"
+            />
+        </div>
+        <div>
             <div class="sidebar">
                 <van-sidebar v-model="active" @change="onChange">
                     <van-sidebar-item v-for="item,index in props.menus" :key="index" :title="item.name" />
@@ -69,9 +75,11 @@
         <div style='display:block;height:100px;'>&nbsp;</div>
         <div>
             <van-tabbar v-model="activeBotTag">
-                <van-tabbar-item icon="wap-home-o" url="index.html">目录</van-tabbar-item>
-                <van-tabbar-item icon="photo-o" url="./views/book.html">阅读</van-tabbar-item>
-                <van-tabbar-item icon="apps-o" url="my.html">支持</van-tabbar-item>
+                <van-tabbar v-model="activeBotTag">
+                    <van-tabbar-item icon="./res/home.png" url="./index.html">目录</van-tabbar-item>
+                    <van-tabbar-item icon="./res/page.png" url="./views/book.html">阅读</van-tabbar-item>
+                    <van-tabbar-item icon="./res/apps.png" url="my.html">支持</van-tabbar-item>
+                </van-tabbar>
             </van-tabbar>
         </div>
     </div>
