--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./js/twloader.js"></script>
     <script>
         //动态加载
-        TW_LoadScriptFromVersion("env.js", ['main.js', 'index.js', './js/http.js'], () => { Start() })
+        TW_LoadScriptFromVersion("env.js", ['main.js','./js/store.js', 'index.js', './js/http.js'], () => { Start() })
     </script>
     <style>
         #app{
