--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>轻量在线阅读工具</title>
+    <title>流阅读工具</title>
     <!-- 引入样式文件 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vant/4.0.0-alpha.3/index.css" />
     <link rel="stylesheet" href="./css/index.css" />
@@ -40,7 +40,7 @@
         .sidebar {
             float: left;
         }
-
+ 
         .ItemContent {
             color: #000;
             text-align: left;
